# thesis_ws

./: .gitignore  AGENT.md  README.md
bags/: README.md
config/: README.md
config/experiments/: profiles.yaml
config/maps/: map_refs.yaml
config/overlays/: README.md
config/tasks/: coverage_schema.yaml  patrol_manager_line2_baseline.yaml  patrol_manager_line2_enhanced.yaml  patrol_manager_params.yaml  waypoint_schema.yaml
docs/: architecture.md  dda7d0c_material_collection_guide.md  experiment_line1_scan_frontend.md  experiment_line2_execution_enhancement.md  interfaces.md  line1_line2_coverage_material_collection_guide.md  task1_mapping.md  task2_single_goal_nav.md  task3_coverage_material_collection_guide.md
launch/: README.md
launch/platform/: README.md  reference_base_bridge.launch  reference_localization_nav_core.launch  reference_mapping_core.launch  reference_sensing_bridge.launch  thesis_scan_frontend.launch
launch/scenarios/: README.md  task1_mapping_session.launch  task2_single_goal_nav.launch  task3_patrol_stub.launch  task3_waypoint_capture.launch
launch/tools/: README.md  record_session.launch  rviz_session.launch
logs/: README.md
maps/: README.md
results/: README.md
results/mapping/: README.md
results/navigation/: README.md
results/patrol/: README.md
rviz/: README.md
scripts/: README.md  check_dda7d0c_material_prep.sh  generate_task3_coverage_task.sh  init_line1_scan_frontend_record.sh  init_line2_execution_record.sh  run_task1_scan_frontend_experiment.sh  run_task2_active_map.sh  run_task2_scan_frontend_experiment.sh  run_task3_active_map.sh  run_task3_execution_experiment.sh  run_task3_waypoint_capture_active_map.sh  save_task1_map.sh
src/: CMakeLists.txt  README.md
src/thesis_algorithms/: CMakeLists.txt  README.md  package.xml
src/thesis_algorithms/scripts/: scan_enhancer_node.py
src/thesis_bringup/: CMakeLists.txt  README.md  package.xml
src/thesis_recording/: CMakeLists.txt  README.md  package.xml
src/thesis_tasks/: CMakeLists.txt  README.md  package.xml
src/thesis_tasks/scripts/: coverage_path_generator.py  task_manager_node.py  waypoint_capture_node.py
tasks/: README.md
(+12 files in other folders)
