<?xml version="1.0"?>
<package format="2">
  <name>thesis_recording</name>
  <version>0.1.0</version>
  <description>Experiment recording, run logs, and result summarization placeholders.</description>

  <maintainer email="wangchong@example.com">Wang Chong</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export/>
</package>
