<?xml version="1.0"?>
<package format="2">
  <name>thesis_tasks</name>
  <version>0.1.0</version>
  <description>Task point schemas and future patrol task orchestration.</description>

  <maintainer email="wangchong@example.com">Wang Chong</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export/>
</package>
